# MiniVideo

./: .gitignore  .travis.yml  CMakeLists.txt  DEBUGGING.md  MiniVideo.pro  PROFILING.md  README.md  TODO.md
.github/workflows/: builds_minianalyser.yml  builds_minivideo.yml
mini_analyser/: README.md  mini_analyser.pro
mini_analyser/resources/: resources.qrc
mini_analyser/src/: about.cpp  about.h  cli.cpp  cli.h  containerexplorer.cpp  containerexplorer.h  fourcchelper.cpp  fourcchelper.h  hexeditor.cpp  hexeditor.h  main.cpp  main.h  mainwindow.cpp  mainwindow.h  mainwindow_datas.cpp  mainwindow_export.cpp  mediawrapper.h  minivideo_textexport_qt.cpp  minivideo_textexport_qt.h  minivideo_utils_qt.cpp  minivideo_utils_qt.h  tabcontainer.cpp  tabcontainer.h  tabdev.cpp  tabdev.h  tabexport.cpp  tabexport.h  textexport.cpp  textexport.h  textexporter.cpp  textexporter.h  utils.cpp  utils.h  videobackends.cpp  videobackends.h  videobackends_ui.cpp  videobackends_ui.h  videobackends_vaapi.cpp  videobackends_vaapi.h  videobackends_vdpau.cpp  (+1 more)
mini_analyser/ui/: about.ui  explorer.ui  fourcchelper.ui  hexeditor.ui  mainwindow.ui  (+5 more)
mini_extractor/: CMakeLists.txt  README.md  mini_extractor.pro
mini_extractor/cmake/toolchains/: toolchain_stlinux_sh4.cmake
mini_extractor/src/: main.cpp  main.h
mini_thumbnailer/: CMakeLists.txt  README.md  mini_thumbnailer.pro
mini_thumbnailer/cmake/modules/: FindLibMiniVideo.cmake  FindMiniVideo.cmake
mini_thumbnailer/cmake/toolchains/: toolchain_llvm.cmake
mini_thumbnailer/src/: main.cpp  main.h
minivideo/: CMakeLists.txt  README.md  TODO.md  libminivideo.pc.cmake  minivideo.pro
minivideo/cmake/modules/: FindLibMiniVideo.cmake  FindMemFD.cmake  FindMiniVideo.cmake
minivideo/cmake/toolchains/: toolchain_llvm.cmake  toolchain_llvm_linux.cmake  toolchain_llvm_osx.cmake  toolchain_mingw32.cmake
minivideo/doc/: cppcheck.html  cppcheck_ignore_list.txt  doxygen.html  generate_cppcheck.sh  generate_doxygen.sh  suppressions.txt
minivideo/doc/doxygen_temp/: Doxyfile
minivideo/src/: avcodecs.c  avcodecs.h  avutils.h  bitstream.c  bitstream.cpp  bitstream.h  bitstream_map.c  bitstream_map.cpp  bitstream_map.h  bitstream_map_struct.h  bitstream_tools.c  bitstream_tools.h  bitstream_utils.c  bitstream_utils.cpp  bitstream_utils.h  cmake_defines.h  cmake_defines.h.in  colors.h  export.c  export.cpp  export.h  export_utils.c  export_utils.cpp  export_utils.h  fourcc.c  fourcc.h  import.c  import.cpp  import.h  mediafile_struct.h  minitraces.c  minitraces.cpp  minitraces.h  minitraces_conf.h  minivideo.c  minivideo.cpp  minivideo.h  minivideo_avutils.h  minivideo_codecs.c  minivideo_codecs.cpp  (+29 more)
minivideo/src/decoder/: video.h
minivideo/src/decoder/h264/: h264.c  h264.cpp  h264.h  h264_cabac.c  h264_cabac.cpp  h264_cabac.h  h264_cabac_table.h  h264_cabac_tables.h  h264_cavlc.c  h264_cavlc.cpp  h264_cavlc.h  h264_cavlc_table.h  h264_cavlc_tables.h  h264_decodingcontext.h  h264_expgolomb.c  h264_expgolomb.cpp  h264_expgolomb.h  h264_inter_prediction.c  h264_inter_prediction.cpp  h264_inter_prediction.h  h264_intra_prediction.c  h264_intra_prediction.cpp  h264_intra_prediction.h  h264_macroblock.c  h264_macroblock.cpp  h264_macroblock.h  h264_macroblock_struct.h  h264_macroblock_utils.c  h264_macroblock_utils.cpp  h264_macroblock_utils.h  h264_nalu.c  h264_nalu.cpp  h264_nalu.h  h264_parameterset.c  h264_parameterset.cpp  h264_parameterset.h  h264_parameterset_struct.h  h264_slice.c  h264_slice.cpp  h264_slice.h  (+7 more)
minivideo/src/decoder/h265/: h265_expgolomb.cpp  h265_expgolomb.h  h265_nalu.cpp  h265_nalu.h  h265_parameterset.cpp  h265_parameterset.h  h265_parameterset_struct.h
minivideo/src/decoder/h266/: h266_nalu.cpp  h266_nalu.h  h266_parameterset.cpp  h266_parameterset.h  h266_parameterset_struct.h
minivideo/src/demuxer/: filter.c  filter.h  idr_filter.c  idr_filter.cpp  idr_filter.h  xml_mapper.c  xml_mapper.cpp  xml_mapper.h
minivideo/src/demuxer/asf/: asf.c  asf.cpp  asf.h  asf_convert.c  asf_convert.cpp  asf_convert.h  asf_object.c  asf_object.cpp  asf_object.h  asf_struct.h
minivideo/src/demuxer/avi/: avi.c  avi.cpp  avi.h  avi_convert.c  avi_convert.cpp  avi_convert.h  avi_struct.h
minivideo/src/demuxer/bruteforce/: bruteforce.c  bruteforce.h
minivideo/src/demuxer/codecs/: codec_private_struct.h
minivideo/src/demuxer/esparser/: esparser.c  esparser.cpp  esparser.h
minivideo/src/demuxer/mkv/: ebml.c  ebml.cpp  ebml.h  mkv.c  mkv.cpp  mkv.h  mkv_cluster.c  mkv_cluster.cpp  mkv_cluster.h  mkv_codec.c  mkv_codec.cpp  mkv_codec.h  mkv_convert.c  mkv_convert.cpp  mkv_convert.h  mkv_struct.h  mkv_tracks.c  mkv_tracks.cpp  mkv_tracks.h
minivideo/src/demuxer/mp3/: mp3.c  mp3.cpp  mp3.h  mp3_struct.h
minivideo/src/demuxer/mp4/: mp4.c  mp4.cpp  mp4.h  mp4_box.c  mp4_box.cpp  mp4_box.h  mp4_convert.c  mp4_convert.cpp  mp4_convert.h  mp4_esds.cpp  mp4_gopro.c  mp4_gopro.cpp  mp4_gopro.h  mp4_meta.cpp  mp4_meta.h  mp4_picture.cpp  mp4_picture.h  mp4_spatial.c  mp4_spatial.cpp  mp4_spatial.h  mp4_stbl.c  mp4_stbl.cpp  mp4_stbl.h  mp4_struct.h  mp4_stsd.cpp  mp4_stsd.h  mp4_virb.cpp  mp4_virb.h
minivideo/src/demuxer/mpeg/: descriptor_struct.h
minivideo/src/demuxer/mpeg/pes/: pes.c  pes.cpp  pes.h  pes_struct.h
minivideo/src/demuxer/mpeg/ps/: ps.c  ps.cpp  ps.h  ps_struct.h
minivideo/src/demuxer/mpeg/ts/: ts.c  ts.cpp  ts.h  ts_struct.h
minivideo/src/demuxer/riff/: riff.c  riff.cpp  riff.h  riff_common.c  riff_common.cpp  riff_common.h  riff_struct.h
minivideo/src/demuxer/wav/: wav.c  wav.h  wav_struct.h
minivideo/src/demuxer/wave/: wave.c  wave.cpp  wave.h  wave_convert.c  wave_convert.cpp  wave_convert.h  wave_struct.h
minivideo/src/depacketizer/: depack.c  depack.cpp  depack.h  depack_struct.h
minivideo/src/depacketizer/h264/: depack_h264.c  depack_h264.cpp  depack_h264.h
minivideo/src/depacketizer/h265/: depack_h265.cpp  depack_h265.h
minivideo/src/depacketizer/h266/: depack_h266.cpp  depack_h266.h
minivideo/src/muxer/: muxer.c  muxer.cpp  muxer.h  pes_packetizer.c  pes_packetizer.cpp  pes_packetizer.h
(+25 files in other folders)
